// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should prioritize error over optional styles 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

.circuit-0:not(:focus) {
  border-color: #FFAF9F;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::placeholder {
  color: #FFAF9F;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<div
  className="circuit-2 circuit-3"
  disabled={true}
>
  <textarea
    aria-invalid={true}
    className="circuit-0 circuit-1"
    disabled={true}
    required={false}
  />
  <div>
    error.svg
  </div>
</div>
`;

exports[`TextArea should render with default styles 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

<div
  className="circuit-2 circuit-3"
  disabled={false}
>
  <textarea
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
</div>
`;

exports[`TextArea should render with disabled styled when passed the disabled prop 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<div
  className="circuit-2 circuit-3"
  disabled={true}
>
  <textarea
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={true}
    required={false}
  />
</div>
`;

exports[`TextArea should render with invalid styles when passed the invalid prop 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

.circuit-0:not(:focus) {
  border-color: #FFAF9F;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::placeholder {
  color: #FFAF9F;
}

<div
  className="circuit-2 circuit-3"
  disabled={false}
>
  <textarea
    aria-invalid={true}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div>
    error.svg
  </div>
</div>
`;

exports[`TextArea should render with optional styles when passed the optional prop 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  background-color: #FAFBFC;
  border-style: dashed;
  box-shadow: none;
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

<div
  className="circuit-2 circuit-3"
  disabled={false}
>
  <textarea
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
</div>
`;

exports[`TextArea should render with warning styles when passed the hasWarning prop 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

.circuit-0:not(:focus) {
  border-color: #FFC859;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus)::placeholder {
  color: #FFC859;
}

<div
  className="circuit-2 circuit-3"
  disabled={false}
>
  <textarea
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div>
    warning.svg
  </div>
</div>
`;
